Update support email to serhat.gurcan@icloud.com

--- a/privacy.html
+++ b/privacy.html
@@ -123,7 +123,7 @@
 
             <div class="section">
                 <h3>İletişim</h3>
-                <p>Sorularınız için: <a href="mailto:serhatgr47@gmail.com">serhatgr47@gmail.com</a></p>
+                <p>Sorularınız için: <a href="mailto:serhat.gurcan@icloud.com">serhat.gurcan@icloud.com</a></p>
             </div>
         </div>
 
@@ -169,7 +169,7 @@
 
             <div class="section">
                 <h3>Contact</h3>
-                <p>For questions: <a href="mailto:serhatgr47@gmail.com">serhatgr47@gmail.com</a></p>
+                <p>For questions: <a href="mailto:serhat.gurcan@icloud.com">serhat.gurcan@icloud.com</a></p>
             </div>
         </div>
 
