--- a/support.html
+++ b/support.html
@@ -138,7 +138,7 @@
 
             <div class="contact-box">
                 <p><strong>Başka sorularınız mı var?</strong></p>
-                <a href="mailto:serhatgr47@gmail.com">E-posta Gönder</a>
+                <a href="mailto:serhat.gurcan@icloud.com">E-posta Gönder</a>
             </div>
         </div>
 
@@ -180,7 +180,7 @@
 
             <div class="contact-box">
                 <p><strong>Have more questions?</strong></p>
-                <a href="mailto:serhatgr47@gmail.com">Send Email</a>
+                <a href="mailto:serhat.gurcan@icloud.com">Send Email</a>
             </div>
         </div>
 
